# TheErudition-GoogleSolutionChallenge

./: .gitignore  AGENTS.md  README.md  skills-lock.json
.agents/skills/hackathon-idea-generator/: SKILL.md
app/: .env.example  .gitignore  analysis_options.yaml  pubspec.yaml
client/: .env  .env.example  biome.jsonc  index.html  jsconfig.json  package-lock.json  package.json  skills-lock.json  vite.config.js
client/src/: app.jsx  index.css  main.jsx
client/src/components/: demo.jsx  help-panel.jsx  logistics-map.jsx  navbar.jsx  supply-chain-control-tower.jsx  theme-provider.jsx
client/src/components/ui/: accordion.jsx  breadcrumb.jsx  calendar.jsx  carousel.jsx  checkbox.jsx  combobox.jsx  (+11 more)
client/src/lib/: auth-context.jsx  firebase.js  supply-chain-api.js
client/src/pages/: about.jsx  audit.jsx  disruptions.jsx  home.jsx  login.jsx  network.jsx  overview.jsx  policies.jsx  shipments.jsx  signup.jsx
docs/: ama-consolidated.md  pharma-supply-chain-srs.md  problem-statements.md  ps1-strategy-notes.md  solution-challenge.md  submission-form.md
docs/videos/: faq.md  intro-to-antigravity.md  intro-to-gemma.md  intro-to-google-ai-studio.md  introductory-session.md
server/: .env.example  .gitignore  main.py  pyproject.toml  supply_chain.db
server/app/: db.py  server.py
server/app/bots/: discord_bot.py  telegram_bot.py
server/app/events/: event_bus.py
server/app/models/: supply_chain.py
server/app/routes/: supply_chain.py
server/app/services/: gemini_service.py  supply_chain_service.py
server/app/utils/: llm.py  logger.py  maps.py  weather.py
